--- a/proyecto/mi_proyecto/mi_aplicacion/templates/iniciarsesion.html
+++ b/proyecto/mi_proyecto/mi_aplicacion/templates/iniciarsesion.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Iniciar Sesión</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -22,13 +22,12 @@
 <div id="nav-container"></div>
 {% include 'nav.html' %}
 
-</script>
 <!-- Contenido de la página -->
 <div class="content-container">
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
         <form id="loginForm" onsubmit="return validateForm()">
-            <label for="Email">Email:</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <label for="password">Contraseña:</label>
             <input type="password" id="password" name="password" required>
@@ -40,8 +39,7 @@
     </div>
 </div>
 
-<script>src= "scripts.js"</script>
-
+<script src="{% static 'js/scripts.js' %}"></script> <!-- Archivo JavaScript para manejar la lógica -->
 
 </body>
 </html>
